fix: fixed pre not wrapping

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,3 +47,8 @@ $utilities: map-merge(
   outline: none;
   border: none;
 }
+
+pre {
+  white-space: pre-wrap;
+  word-break: break-word;
+}
